[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toyclaw"
version = "0.1.0"
description = "Ultra-minimal personal AI assistant"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=1.0",
    "httpx>=0.25",
    "croniter>=1.3",
    "readability-lxml>=0.8",
]

[project.scripts]
toyclaw = "toyclaw.cli:main"
